# trump-voo

./: .gitignore  README.md  _config.yml  _toc.yml  prepare.py  pyproject.toml  test_distil.ipynb  test_model.ipynb  train.py  train_distil.py  train_modern.py  train_modernbert.py
.github/workflows/: publish.yml
