[project]
name = "presidential-alpha"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "anywidget>=0.9.18",
    "datasets>=4.2.0",
    "jax>=0.7.2",
    "jupyter>=1.1.1",
    "kagglehub>=0.3.13",
    "polars>=1.34.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "transformers-interpret>=0.10.0",
    "vectorbt>=0.28.1",
    "wandb>=0.22.2",
    "yfinance>=0.2.66",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[dependency-groups]
dev = [
    "jupyter-book>=1.0.4.post1",
]
